<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:background="#94D41C"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:height="50dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="25sp"
            android:text="@string/login_header"
            />/
        
        
"
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shapeTriangle"
        android:layout_centerInParent="true"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:text="P"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_title"
                android:textColor="#4B4B4B"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shapeTriangle"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_above="@+id/loginPanel"
        android:layout_centerHorizontal="true"
        android:background="@drawable/triangle" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginPanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
        android:background="@drawable/loginshape"
        
            android:padding="10dp" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/placeholder_username"
                android:inputType="textWebEditText"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/placeholder_password"
                android:inputType="textWebEditText"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="@string/login_signin"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_bg"
                    android:text="@string/login_exit"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            
        
    
        </LinearLayout>
        
        
        
    
    </RelativeLayout>

</RelativeLayout>